--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ APP_PORT=8000
 # =======================
 DB_ENGINE=mysql+pymysql
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=prueba
