--- a/.env
+++ b/.env
@@ -13,10 +13,10 @@ APP_PORT=8000
 # =======================
 DB_ENGINE=mysql+pymysql
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=prueba1
+DB_NAME=prueba
 DATABASE_URL=${DB_ENGINE}://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # =======================
