--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 
 .env
 
-Config/__pycache__/
-
-__pycache__/
-
-Services/
-
-Models/users/usersrolesorganicionesModel.py
+__pycache__
+__init__.py
