--- a/.github/workflows/main_backpmj2.yml
+++ b/.github/workflows/main_backpmj2.yml
@@ -69,8 +69,9 @@ jobs:
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
         with:
           app-name: 'backpmj2'
           slot-name: 'Production'
+          package: .
+
           
