--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@ APP_PORT=8000
 # 🗄 BASE DE DATOS
 # =======================
 DB_ENGINE=mysql+pymysql
-DB_USER=root
-DB_PASSWORD=
-DB_HOST=localhost
+DB_USER=u687895880_PRUEBAS_PMJ #root
+DB_PASSWORD= q?1g;pK/tlL
+DB_HOST=82.197.82.49 #localhost
 DB_PORT=3306
-DB_NAME=prueba
+DB_NAME=u687895880_PRUEBAS_PMJ  #prueba
 DATABASE_URL=${DB_ENGINE}://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # =======================
