--- a/.env
+++ b/.env
@@ -12,17 +12,11 @@ APP_PORT=8000
 # 🗄 BASE DE DATOS
 # =======================
 DB_ENGINE=mysql+pymysql
-<<<<<<< HEAD
-DB_USER=u687895880_PRUEBAS_PMJ #root
-DB_PASSWORD= q?1g;pK/tlL
-DB_HOST=82.197.82.49 #localhost
-=======
 DB_USER=root
-DB_PASSWORD=root
+DB_PASSWORD=
 DB_HOST=localhost
->>>>>>> 99ce89edc6dd1ded650d3e2dce781fd81aa8df16
 DB_PORT=3306
-DB_NAME=u687895880_PRUEBAS_PMJ  #prueba
+DB_NAME=prueba
 DATABASE_URL=${DB_ENGINE}://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # =======================
